--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
 
       <h2 class="gallery-title">Gallery</h2>
       <div class="gallery">
-        <img src="/assets/pexels-pixabay-327482.jpg">
-        <img src="/assets/pexels-samuel-figueroa-2106249.jpg">
-        <img src="/assets/7.jpg">
-        <img src="/assets/9.jpg">
-        <img src="/assets/g1.jpg">
-        <img src="/assets/pexels-wewe-yang-4508641.jpg">
-        <img src="/assets/g2.jpg">
-        <img src="/assets/room.jpg">
+        <img src="assets/pexels-pixabay-327482.jpg">
+        <img src="assets/pexels-samuel-figueroa-2106249.jpg">
+        <img src="assets/7.jpg">
+        <img src="assets/9.jpg">
+        <img src="assets/g1.jpg">
+        <img src="assets/pexels-wewe-yang-4508641.jpg">
+        <img src="assets/g2.jpg">
+        <img src="assets/room.jpg">
        
       </div>
 
