--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="projects.html">Projects</a>
           <a href="gallery.html">Gallery</a>
           <a href="about.html">About Us</a>
-          Call us at: (123) 456-7890
+          <p>Call us at: (123) 456-7890</p>
         </div>
       </nav>
     </header>
