--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
             Lorem Design&Construction inc. is your trusted construction company
             specializing in high-end custom residential and commercial
             construction projects. We specialized in lime base finishes which develop into
-            modern textures for the minimalist space. what is plaster art and
-            microcement? Our treatment is based in Lime marble stucco & flexible
-            polymers. We prepare our own formula to install on any superficial
-            material. This formula is suitable for High traffic environments
+            modern textures for the minimalist space. We prepare our own formula suitable for high traffic environments
             like kitchens, restaurants, bathrooms, patios, and more. 
           </p>
           <div class="services-container"> 
