--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           style="border:0"
           loading="lazy"
           allowfullscreen
-          src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ2Z_vsEPK3IARX9EixjaxRwA&key=AIzaSyAFCLtCF4rG_Rvq3M4UAKe9PEARo5YiUVU"
+          src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
         ></iframe>
       </div>
     </footer>
@@ -323,3 +323,4 @@
     <button class="scrollToTop">Lets Chat</button>
   </body>
 </html>
+
