--- a/index.html
+++ b/index.html
@@ -219,10 +219,29 @@
       <div class="about-container">
         <div class="section">
           <h3 tabindex="0">Our Values</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora cumque, libero, doloribus repellendus tempore consectetur autem ducimus earum beatae ipsam perferendis reiciendis, commodi in cum facilis dolorum neque facere. Earum laudantium animi autem vero incidunt ipsam commodi doloremque necessitatibus ullam cum fugiat sit esse, natus atque qui omnis sequi asperiores.</p>
-        </div>
+          <p>
+            We strive to be the world's premier construction
+            and project management company. Customers and partners will see us
+            as integral to their success. We will anticipate their needs and
+            deliver on every commitment we make. We will create opportunities to
+            achieve the extraordinary and responsive. Integrating global and
+            local perspectives, with the responsive and responsibility to our
+            communities.
+          </p>        </div>
         <div class="section">
           <h3 tabindex="0">Our Goals</h3>
+          <p>
+            We strive to be the world's premier construction
+            and project management company. Customers and partners will see us
+            as integral to their success. We will anticipate their needs and
+            deliver on every commitment we make. We will create opportunities to
+            achieve the extraordinary and responsive. Integrating global and
+            local perspectives, with the responsive and responsibility to our
+            communities.
+          </p>
+        </div>
+        <div class="section">
+          <h3 tabindex="0">Our Promise</h3>
           <p>
             We strive to be the world's premier construction
             and project management company. Customers and partners will see us
