--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <body> 
     <div id="mobile-navlinks" class="mobile-navlinks"> 
       <nav>
-          <a href="#services">Services</a>
-          <a href="#gallery">Gallery</a>
-          <a href="#contact">Contact Us</a>
+          <button id="exit-btn" class="exit">X</button>
+          <a class="mobile-link" href="#services">Services</a>
+          <a class="mobile-link" href="#gallery">Gallery</a>
+          <a class="mobile-link" href="#contact">Contact Us</a>
           <p>Call us at: (123) 456-7890</p>
     </nav>
   </div>  
@@ -33,7 +34,7 @@
         </div>
       </nav>
       <div class="mobile-nav">
-        <button onclick="document.getElementById('mobile-navlinks').classList.toggle('idk')">HAMBURGER</button>
+        <button id="hamburger"><img src="assets/burg.svg" alt='hamburger icon'/></button>
       
       </div>
       
